brat/test/golden/imports/use-unqualified.brat
import lib

main :: Nat
main = x
